# segway_ros

./: README.md
src/catkin_ws/401pius2023.2.9/launch/: display.launch
src/catkin_ws/robot_setup_tf/: package.xml
src/catkin_ws/segwayrmp/launch/: enable.launch  init_rmp.launch  move_base.launch
src/catkin_ws/segwayrmp/src/: .Ge_encoder_odometry.cpp.swp  robot.cpp
src/catkin_ws/src/: 401plusChassisInit.sh
src/catkin_ws/src/401pius2023.2.9/urdf/: 401pius.urdf
src/catkin_ws/src/segwayrmp/: CMakeLists.txt
src/catkin_ws/src/segwayrmp/launch/: amcl.launch  base_controller.launch  camera.launch  combined_gammping.launch  combined_launch.launch  combined_nav.launch  gmapping.launch  move_base copy.launch  move_base.launch  move_base_copy.launch  move_base_gmapping.launch  ninebot_gx_configuration.launch  robot_pose_ekf.launch  rs_t265.launch  teb_move_base.launch  test.launch  vlp_notmatcher.launch  vlp_start.launch  vlpgampping.launch
src/catkin_ws/src/segwayrmp/launch/OLD_launch/: base_controller.launch  vlpgampping.launch
src/catkin_ws/src/segwayrmp/maps/: map.yaml
src/catkin_ws/src/segwayrmp/maps/old map/: my_map.pgm
src/catkin_ws/src/segwayrmp/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_base_local_planner_params.yaml
src/catkin_ws/src/segwayrmp/rviz/: combined_config.rviz
src/catkin_ws/src/segwayrmp/script/: maker.py
src/catkin_ws/src/segwayrmp/src/: Enable.cpp  SmartCar.cpp  Smartcar_old.cpp  odom_base_link_tf_node.cpp  robot.cpp  robot_old.cpp  vel_router.cpp
src/catkin_ws/src/segwayrmp/tools/: Enablecar.cpp  breakout.cpp
src/catkin_ws/src/ydlidar_ros_driver/launch/: TG.launch  lidar.rviz
